--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <link rel="icon" type="image/svg+xml" href="/solidjs.svg" />
-    <title>Tauri + Solid + Typescript App</title>
+    <title>HachiPlayer</title>
   </head>
 
   <body>
